--- a/upload-service/package.json
+++ b/upload-service/package.json
@@ -14,6 +14,9 @@
     "aws-sdk": "^2.1629.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.1"
+    "kafka-node": "^5.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.1",
+    "retry": "^0.13.1"
   }
 }
